Ranch under the hood now displays correctly on small screens

--- a/src/components/Asciidoctor/Asciidoctor.module.scss
+++ b/src/components/Asciidoctor/Asciidoctor.module.scss
@@ -7,9 +7,10 @@
 //     flex-direction: row;
 // }
 
-.asciidoctor{
+.asciidoctorInnerContainer{
     max-width:700px;
     // @import 'asciidoctor';
+    overflow:hidden;
 }
 
 .asciidoctorContainer{
